kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: vproapp
 labels:
   app: vproapp
spec:
  selector: 
       matchLabels:
        app: vpromc
  replicas: 1
  template:
     metadata:
        labels:
         app: vproapp
     spec:
        containers:
        - name: vpromc
          image: rajeshgill634/vproapp
          ports:
          - name: vproapp-port
            containerPort: 8080
